# hypermodern-screening

./: .codacy.yml  .flake8  .gitignore  .pre-commit-config.yaml  README.rst  codacy.yml  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  corrs.rst  ee.rst  index.rst  license.rst  modules.rst  qualgsa.rst  quantgsa.rst  reference.rst  references.rst  sa.rst  sampling.rst  sigma_norm.rst  uq.rst
docs/notebooks/: sampling.ipynb
docs/notebooks/.ipynb_checkpoints/: elementary_effects-checkpoint.ipynb  measures-checkpoint.ipynb  sampling-checkpoint.ipynb
src/hypermodern_screening/: __init__.py  foo.py  sampling_schemes.py  screening_measures.py  select_sample_set.py  transform_distributions.py  transform_ee.py  transform_reorder.py
src/hypermodern_screening.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_sampling_schemes.py  test_screening_measures.py  test_select_sample_set.py  test_transform_distributions.py  test_transform_ee.py  test_transform_reorder.py
tests/resources/: distributions.py  nataf_transformation.py
