[tool.poetry]
name = "hypermodern-screening"
version = "0.1.0"
description = "The hypermodern screening project"
authors = ["tostenzel <tobias.stenzel@mailbox.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tostenzel/hypermodern-screening"
repository = "https://github.com/tostenzel/hypermodern-screening"
keywords = ["hypermodern", "screening"]

[tool.poetry.dependencies]
python = "^3.7"
chaospy = "^3.2.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-screening = "hypermodern_screening.foo:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
