[tool.poetry]
name = "hypermodern-screening"
version = "0.1.0"
description = "The hypermodern screening project"
authors = ["tostenzel <tobias.stenzel@mailbox.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tostenzel/hypermodern-screening"
repository = "https://github.com/tostenzel/hypermodern-screening"
keywords = ["hypermodern", "screening"]

[tool.poetry.dependencies]
python = "^3.7"
chaospy = "^3.2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"

[tool.poetry.scripts]
hypermodern-screening = "hypermodern_screening.foo:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_screening"]

[tool.coverage.report]
show_missing = true
fail_under = 90
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
