[tool.poetry]
name = "hypermodern-screening"
version = "0.0.4"
description = "The hypermodern screening project"
authors = ["tostenzel <tobias.stenzel@mailbox.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/tostenzel/hypermodern-screening"
repository = "https://github.com/tostenzel/hypermodern-screening"
keywords = ["hypermodern",
    "screening",
    "uncertainty-quantification", "global-sensitivity-analysis",
    "screening",
    "sampling-methods"]
documentation = "https://hypermodern-screening.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
chaospy = "^3.2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
mypy = "^0.770"
pytype = {version = "^2020.3.19", python = "3.7"}
flake8-annotations = "^2.0.1"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.2.0"
xdoctest = "^0.12.0"
sphinx = "^2.4.4"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.22"
restructuredtext-lint = "^1.3.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_screening"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
